--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,15 @@
 
 # dependencies
 /node_modules
+/client/node_modules
+/client/build
 
 # testing
 /coverage
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
