--- a/client/package.json
+++ b/client/package.json
@@ -3,24 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.10.6",
-    "@material-ui/core": "^4.11.2",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.5",
+    "web-vitals": "^1.1.1",
+    "workbox-background-sync": "^6.1.5",
+    "workbox-broadcast-update": "^6.1.5",
+    "workbox-cacheable-response": "^6.1.5",
+    "workbox-core": "^6.1.5",
+    "workbox-expiration": "^6.1.5",
+    "workbox-google-analytics": "^6.1.5",
+    "workbox-navigation-preload": "^6.1.5",
+    "workbox-precaching": "^6.1.5",
+    "workbox-range-requests": "^6.1.5",
+    "workbox-routing": "^6.1.5",
+    "workbox-strategies": "^6.1.5",
+    "workbox-streams": "^6.1.5",
+    "@date-io/date-fns": "^2.10.8",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
-    "@material-ui/pickers": "^3.2.10",
-    "@types/react-router-dom": "^5.1.6",
+    "@material-ui/pickers": "^3.3.10",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
-    "firebase": "^8.2.1",
-    "lodash": "^4.17.20",
+    "firebase": "^8.4.1",
     "materialize-css": "^1.0.0-rc.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-list-view": "^1.0.0",
-    "react-materialize": "^3.9.5",
-    "react-redux": "^7.2.2",
+    "react-materialize": "^3.9.8",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-select": "^3.1.1",
+    "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
     "react-text": "^3.2.4",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
