--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "npm": "7.0.8"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0"
+    "body-parser": "^1.19.0",
+    "concurrently": "^6.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-pino-logger": "^6.0.0",
+    "node-env-run": "^4.0.2",
+    "nodemon": "^2.0.7",
+    "twilio": "^3.61.0",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "client": "cd client && yarn start",
@@ -24,14 +31,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.3.0",
-    "express": "^4.17.1",
-    "express-pino-logger": "^5.0.0",
-    "node-env-run": "^4.0.2",
-    "nodemon": "^2.0.6",
+    "cors": "^2.8.5",
     "npm-run-all": "^4.1.5",
-    "pino-colada": "^2.1.0",
-    "twilio": "^3.54.1"
+    "pino-colada": "^2.1.0"
   }
 }
