--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "cors": "^2.8.5",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0"
