--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "@babel/core": "^7.13.0",
     "react-select": "^4.3.0",
     "react-text": "^3.2.4",
     "react-tinder-card": "^1.4.0",
